--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 * {
     font-family: 'M PLUS Rounded 1c', sans-serif;
+    -webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
 }
 
 body {
